syntax="proto3";
package proto;
option go_package="/.";

message Company{
  int64 id = 1;
  int64 oib = 2;
  string name = 3;
  string address = 4;
}

message CompaniesList{
  repeated Company list = 1;
  int64 limit = 2;
  int64 page = 3;
  int64 last_page = 4;
  int64 total = 5;
}

message CompanyListReq{
  string s = 1;
  optional int64 limit = 2;
  optional int64 page = 3;
}

service ListOfCompanies{
  rpc GetCompaniesList(CompanyListReq) returns(CompaniesList) {}
}